WordPress-Content-Files

--- a/wp-content/themes/custom-theme/style.css
+++ b/wp-content/themes/custom-theme/style.css
@@ -3,6 +3,7 @@ Theme Name: Custome Theme Development
 Theme URI :#
 Author: Jaber Khan
 Author URI : #
+Text Domain: setup_english
 Description: WordPress Custom Theme Development Setup and Configuration
 Tags: wordpress, theme, custom-theme
 Requires at least: 5.3
