WordPress-Content-Files

--- a/wp-content/themes/custom-theme/css/custom-style.css
+++ b/wp-content/themes/custom-theme/css/custom-style.css
@@ -33,6 +33,11 @@ body{
 .dropdown-item{
     color: #FFFFFF !important;
 }
+
+.dropdown-menu li:hover{
+    color: #092272 !important;
+}
+
 .navbar-brand img{
     width: 150px;
     height: 40px;
