--- a/wp-content/themes/custom-theme/assets/css/custom-style.css
+++ b/wp-content/themes/custom-theme/assets/css/custom-style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
     background-color: blue;
 }
@@ -18,6 +23,26 @@ body{
     font-family: 'Montserrat', sans-serif;
     font-family: 'Poor Story', cursive;
 }
+
+
+
+
+
+/* ================================================================= */
+    Menu Area Container
+/* ================================================================= */
+
+.menu-area{
+    margin-top: -40px;
+    margin-bottom: 50px;
+}
+
+
+.menu-area{
+    margin-top: -24px;
+    margin-bottom: 70px;
+}
+
 
 .navbar {
     background: #050555 !important;
@@ -89,4 +114,70 @@ body{
 .navbar-nav .dropdown-item:hover {
     background-color: #ff6600; /* Background color on hover */
     color: #fff; /* Text color on hover */
+}
+
+
+.post-title{
+    text-decoration: none;
+    color: inherit;
+}
+
+.post-title, .post-title:hover, .post-title:focus, .post-title:active {
+    text-decoration: none;
+    color: inherit;
+}
+
+
+
+/* ============================ */
+    Footer Area Styling
+/* ============================ */
+
+footer{
+    background-color: #0c0c0c;
+    color: #FFFFFF;
+    padding: 10px 20px;
+}
+#footer-area {
+    background-color: #0c0c0c;
+    color: #FFFFFF;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    list-style: none;
+    margin-top: 40px;
+}
+.menu-primary-menu-container .menu{
+    list-style: none;
+    display: flex;
+    padding: 10px;
+    margin: 0 15px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+
+
+/* ============================ */
+    Comment Styling
+/* ============================ */
+.comment-form  .comment-form-comment  label {
+    margin-top: 10px;
+    display: block !important;
+    color: #095080;
+}
+
+.comment-form label {
+    margin-top: 10px;
+    display: block !important;
+    color: #095080;
+}
+
+.form-submit .submit{
+    background-color: #050555;
+    padding: 8px;
+    color: #FFFFFF;
+    outline: none;
+    border: 1px solid #050555;
+    border-radius: 5px 5px;
 }
